# myfetch

./: .gitignore  CMakeLists.txt  build.sh  compile.sh  myfetch
src/: myfetch.c  myfetch.h
src/common/: init.c  io.h  parse.c  parse.h
src/detection/os/: os.c  os.h  os_linux.c
src/logo/: logo.c  logo.h  logobuild.c
src/logo/ascii/: aeros.txt
src/util/: macro.h  mallochelpler.h  strbuf.c  strbuf.h
